--- a/config.toml
+++ b/config.toml
@@ -231,7 +231,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     [[params.about.item]]
       name = '<a href="https://www.researchgate.net/profile/Patrick_Forscher">Patrick Forscher</a>'
       position = "Postdoc"
-      description = "Assistant Professor at the University of Arkansas. Joins the lab to find funding sources for the Psychological Science Accelerator."
+      description = "PhD from University of Wisconsin-Madison. Joins the lab to find funding sources for the Psychological Science Accelerator."
       img = "Patrick.png"
       alt = "Patrick"
       social = [
@@ -254,7 +254,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     [[params.about.item]]
       name = '<a href="">Martin Oudart</a>'
       position = "Intern"
-      description = "Sc.B in medicine at UGA. Joins the lab as an MSc intern and will explore links between social attachment and menopausal hot flashes."
+      description = "B.Sc. in medicine from UGA. Joins the lab as an MSc intern and will explore links between social attachment and menopausal hot flashes."
       img = "blank.png"
       alt = "blank"
       social = [
