added blandine & ronan

--- a/config.toml
+++ b/config.toml
@@ -308,8 +308,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     img = "bastien.png"
     alt = "Bastien Paris"
     social = [
-      ["icon-globe", ""]
-    ]  
+      ["icon-github", "https://github.com/b6stien"]
+    ]
     
   [[params.about.item]]
     name = '<a>Zaithwa Matemvu</a>'
@@ -317,9 +317,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     description = "MBBS student at the University of Malawi, interested in the application of psychological research in clinical work."
     img = "zaithwa.png"
     alt = "Zaithwa Matemvu"
-    social = [
-      ["icon-globe", ""]
-    ]  
+    social = []  
     
   [[params.about.item]]
     name = '<a>Kashish Madan</a>'
@@ -329,7 +327,23 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     alt = "Kashish Madan"
     social = [
       ["icon-globe", "https://www.linkedin.com/in/kashishmadan"]
-    ]  
+    ]
+
+  [[params.about.item]]
+    name = '<a href="blandine.ribotta@etu.univ-grenoble-alpes.fr">Blandine Ribotta</a>'
+    position = "MA Student"
+    description = "BA in psychology at UGA. Joins the lab for her MA, and will work on the measurement instruments of romantic relationship quality."
+    img = "blandine.png"
+    alt = "Blandine Ribotta"
+    social = []
+
+  [[params.about.item]]
+    name = '<a href="ronan.bellemin@etu.univ-grenoble-alpes.fr">Ronan Bellemin</a>'
+    position = "MA Student"
+    description = "BA in psychology at UGA. Joins the lab for his MA, and will work on the relationships between temperature and sexual/dating behavior."
+    img = "ronan.png"
+    alt = "Ronan Bellemin"
+    social = []
   
   
   # Testimonials section
